second section mobile fix 2

--- a/style.css
+++ b/style.css
@@ -257,10 +257,11 @@ body{
 .scheduleTimeDiv{
     display: flex;
     flex-direction: column;
+    margin-top: 2rem;
 }
 .scheduleDiv{
     flex-direction: column;
-
+    margin-left: 2.5rem;
     justify-content: center;
     align-items: center;
 }
@@ -275,16 +276,16 @@ body{
 .locationDiv {
     display: flex;
     flex-direction: row;
+    align-items: center;
     gap: 0rem;
     margin-top: 1rem;
     margin-left: -1rem;
 }
 
 .scheduleH3{
-    text-align: center;
-    text-wrap: nowrap;
+    text-align: left;
+    text-wrap: wrap;
     font-size: 0.8rem;
-    width: 1.5rem;
 }
 
 .pinLogoDiv{
@@ -294,7 +295,8 @@ body{
 
 .pinLogo{
     width: 1rem;
-    margin-top: 0.2rem;
+    height: 1rem;
+    margin-top: 0.1rem;
 }
 
 }
